Add Colab option to notebooks

--- a/notebooks/01b_aproximacion_funciones.ipynb
+++ b/notebooks/01b_aproximacion_funciones.ipynb
@@ -28,6 +28,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "14e1d974-f4b0-4dea-bbbc-a14afd7b220e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'google.colab' in str(get_ipython()):\n",
+    "    %pip install ipympl\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6739e76b-f90b-4096-b840-236827feebbe",
    "metadata": {},
    "outputs": [],
@@ -37,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "damaged-pressing",
    "metadata": {},
    "outputs": [],
@@ -49,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "latter-dependence",
    "metadata": {},
    "outputs": [
@@ -85,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "automatic-iraqi",
    "metadata": {},
    "outputs": [],
@@ -112,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "concerned-temperature",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77f69f294c8c4e479b98afa458515afa",
+       "model_id": "7681d341f2d94a91bba30714c02f8a84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "global-discipline",
    "metadata": {},
    "outputs": [],
@@ -189,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "inclusive-kentucky",
    "metadata": {},
    "outputs": [],
@@ -201,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "olympic-banner",
    "metadata": {},
    "outputs": [
@@ -219,7 +232,7 @@
        "       π                  π                π      "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b1bdf42b-dd55-4a22-96ab-9ab76fd15714",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "785391691e304d61b1de9c2a6a2a31fd",
+       "model_id": "3b1a6b7794ca4b488527f2afa90d14ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,12 +306,12 @@
     "\n",
     "Calcule la norma $L_2$ del error\n",
     "\n",
-    "$$\\Vert f - u\\Vert = \\sqrt{\\int\\limits_0^1 f(x)^2 \\mathrm{d}x}\\, .$$"
+    "$$\\Vert f - u\\Vert = \\sqrt{\\int\\limits_0^1 \\left[f(x) - u(x)\\right]^2 \\mathrm{d}x}\\, .$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "actual-victory",
    "metadata": {},
    "outputs": [],
@@ -316,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "blind-bowling",
    "metadata": {},
    "outputs": [],
@@ -351,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "designing-private",
    "metadata": {},
    "outputs": [],
