Correct inner product notation in 01a notebook

--- a/notebooks/01a_aproximacion.ipynb
+++ b/notebooks/01a_aproximacion.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "donde\n",
     "\n",
-    "$$E = (\\mathbf{e}, \\mathbf{e}) = \\Vert \\mathbf{e}\\Vert^2 =\n",
+    "$$E = \\langle\\mathbf{e}, \\mathbf{e}\\rangle = \\Vert \\mathbf{e}\\Vert^2 =\n",
     "\\langle\\mathbf{f} - c_0\\boldsymbol{\\psi}_0,\n",
     "\\mathbf{f} - c_0\\boldsymbol{\\psi}_0\\rangle\\, $$\n",
     "\n",
