Agregar notebooks de integración numérica y diferencias finitas

--- a/notebooks/02_interpolacion.ipynb
+++ b/notebooks/02_interpolacion.ipynb
@@ -354,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0f399e67faa494eae0ac2b270ea147b",
+       "model_id": "d82001032c7d4f1989dff85094c01e74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inte = sym.sqrt(sym.integrate((sym.exp(x) - poli)**2, (x, 0, 5)))"
+    "inte = sym.sqrt(sym.Integral((sym.exp(x) - poli)**2, (x, 0, 5)).evalf())"
    ]
   },
   {
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inte2 = sym.sqrt(sym.integrate(sym.exp(x)**2, (x, 0, 5)))"
+    "inte2 = sym.sqrt(sym.Integral(sym.exp(x)**2, (x, 0, 5)).evalf())"
    ]
   },
   {
@@ -531,7 +531,7 @@
     }
    ],
    "source": [
-    "sym.N(inte/inte2)"
+    "inte/inte2"
    ]
   },
   {
@@ -570,7 +570,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f53148bbf96741ec91b404d25ef7a393",
+       "model_id": "1149687f1eed41759477053d2b64412a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -623,7 +623,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0808c60c61b4ba39913e4705301503f",
+       "model_id": "3990e5fa0eb541f9b5e0670d737c12f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,7 +677,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "345e7743210a4b82897542df784746de",
+       "model_id": "188c8346518b4be0b2f1649ae3c7bd25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +733,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "debbefdd0e5e41708c878d7a58003ae5",
+       "model_id": "5287233254f1432d88dc9d8abf28fcea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -867,7 +867,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c862a2defe424ef4bd20485c22bd70a4",
+       "model_id": "5ad13d3152254bebaae25768519fba5f",
        "version_major": 2,
        "version_minor": 0
       },
