Agregar licencia a notebook de sistemas no lineales

--- a/notebooks/06_sistemas_no-lineales.ipynb
+++ b/notebooks/06_sistemas_no-lineales.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eb8cc225-5927-490b-88a0-5dbf035ee23b",
+   "metadata": {},
+   "source": [
+    "Contenido bajo licencia Creative Commons BY 4.0 y código bajo licencia MIT. © Nicolás Guarín-Zapata 2026."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "519142dd-31cd-4fe7-be10-9efe55fc0b2f",
    "metadata": {},
    "source": [
@@ -142,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0928e5a851bd439088394a45b96310e9",
+       "model_id": "b636cac3b96f40feaa2a58fa88c7456b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c371472f6254438bb96869cdc296411f",
+       "model_id": "33091ec72e7d4a57a5b771e789723d94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -698,7 +706,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb02910f0ee43d883424c75fce224bc",
+       "model_id": "687cb7a6d6f644d2b968d2b1546018bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,7 +799,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b1720f0ce414b329ffffccdded29eff",
+       "model_id": "be2931968cbf46debc7f3f22051fffec",
        "version_major": 2,
        "version_minor": 0
       },
